# santOS

./: .gitignore  .swift-version  CMakeLists.txt  Makefile  Package.swift  README.md  toolset.json
.sourcekit-lsp/: config.json
Sources/Arch/armv7/: start.S
Sources/Arch/include/: armv7a.h
Sources/kern/: BitField.swift  PL011.swift  UART0.swift  asm.swift  init.swift  uart0.swift
Sources/kern/arch/armv7/: interrupt.S
Sources/lib/: arc4random.swift  posix_memalign.swift  putchar.swift
Sources/lib/libc/: libc_hooks.swift
compile/armv7/: script.ld
compile/tools/: mkimage
include/: init.h  kern.h  proto.h
kern/: init.swift  putc.swift  start.S
lib/: arc4random.c  posix_memalign.c  putchar.c
lib/libc/: libc_hooks.c
src/compile/: CMakeLists.txt  ld.script
src/include/: init.h
src/kern/: init.swift  start.S
